--- a/conf/a.yaml
+++ b/conf/a.yaml
@@ -14,3 +14,7 @@ test.test.com:
   美国,,,: 1.1.1.10 3.3.3.10
   马来西亚,,,: 1.1.1.11 3.3.3.11
   土耳其,,,: 1.1.1.12 3.3.3.12
+
+a.b.com:
+  ttl: 2000
+  default: 11.11.11.11 12.12.12.12
